API now has a get endpoint of /block/:blockId and post endpoint of /block. Still need to implement the endpoints.

--- a/project 3/package.json
+++ b/project 3/package.json
@@ -9,6 +9,7 @@
   "author": "Luke McCarthy",
   "license": "BSD",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3"
   },
   "devDependencies": {
