--- a/project 3/package.json
+++ b/project 3/package.json
@@ -10,9 +10,14 @@
   "license": "BSD",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "crypto-js": "^3.1.9-1",
+    "express": "^4.16.3",
+    "level": "^4.0.0"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "require-inject": "^1.4.3",
+    "sinon": "^6.1.5"
   }
 }
