--- a/project 4/package.json
+++ b/project 4/package.json
@@ -10,15 +10,18 @@
   "author": "Luke McCarthy",
   "license": "BSD",
   "dependencies": {
+    "bitcoinjs-lib": "^4.0.2",
+    "bitcoinjs-message": "^2.0.0",
     "body-parser": "^1.18.3",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
-    "level": "^4.0.0"
+    "level": "^4.0.0",
+    "moment": "^2.22.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "require-inject": "^1.4.3",
-    "sinon": "^6.1.5"
+    "sinon": "^7.1.1"
   }
 }
