--- a/project 5/smart_contracts/package.json
+++ b/project 5/smart_contracts/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "truffle test",
+    "deploy-dev": ""
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
   "dependencies": {
     "openzeppelin-solidity": "2.0.0-rc.1",
     "truffle-hdwallet-provider": "0.0.6"
+  },
+  "devDependencies": {
+    "truffle-assertions": "^0.7.1"
   }
 }
